Save current changes

--- a/source/_posts/冷湖实习.md
+++ b/source/_posts/冷湖实习.md
@@ -7,7 +7,8 @@ tags: 课程
 要说明的是，“冷湖”实际上是位于青海茫崖市的一片戈壁，里面有非常典型的雅丹地貌。实际上，冷湖只是我们实习的一个小部分，我们还去了很多的地方。
 
 实习笔记整理：[下载](/downloads/冷湖实习/冷湖实习笔记.pdf)
-实习报告：[下载](/downloads/冷湖实习/冷湖实习报告.pdff)
+实习报告：（https://pan.baidu.com/s/1xGsrMlrQtfEWuQN2booguw?pwd=c7er） 提取码: c7er 
+
 
 
 
